Update readme file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Netflix UI clone using html css | Rajamanickam</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" href="assets/img/favicon.ico">
-    <link rel="canonical" href="https://dark-light-mode-css.vercel.app/" />
+    <link rel="canonical" href="https://netflix-ui-clone-delta.vercel.app/" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
   </head>
   <body>
